--- a/EvidencePojisteni.Web/Views/Home/Pojisteni.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/Pojisteni.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
     <div class="text-center">
-        <h1 class="display-4">Pojisteni</h1>
-        <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        <h1 class="display-4">Pojištění</h1>
+        
     </div>
 }
