--- a/EvidencePojisteni.Web/Views/Shared/_Layout.cshtml
+++ b/EvidencePojisteni.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Pojistenci">Pojištěnci</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PridatPojisteniPojistenci">PřidatPojištěníPojištěnci</a>
+                        </li>
                     </ul>
                 </div>
             </div>
