--- a/EvidencePojisteni.Web/Views/Home/PridatPojisteniPojistenci.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/PridatPojisteniPojistenci.cshtml
@@ -11,7 +11,7 @@
         <select id="TypPojisteni" name="TypPojisteni" class="">
             <option value="majetek">Pojištění majetku</option>
             <option value="vozidlo">Pojištění vozidla</option>
-            <option value="životní">Životní pojištění</option>
+            <option value="zivotni">Životní pojištění</option>
         </select>
     </div>
             <label for="Castka">Částka</label>
