Enhance Razor views with dynamic model data
Updated various Razor view files to replace static text with dynamic model properties. Key changes include:
- Displaying user names, contact information, and insurance details using model data in `DetailPojistence.cshtml`, `DetailPojisteni.cshtml`, `Pojistenci.cshtml`, and `PridatPojisteniPojistenci.cshtml`.
- Improved overall data representation in the views for better user experience.

--- a/EvidencePojisteni.Web/Views/Home/DetailPojisteni.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/DetailPojisteni.cshtml
@@ -12,23 +12,19 @@
     </div>
     <div class="">
         <span class="label">Pojištěná osoba</span>
-        <span class="value">Jmeno</span>
+        <span class="value">@Model.Jmeno</span>
     </div>
     <div class="">
         <span class="label">Platnost od</span>
-        <span class="value">01.01.2025</span>
+        <span class="value">@Model.PlatnostOd</span>
     </div>
     <div class="info-row">
         <span class="label">Platnost do</span>
-        <span class="value">31.12.2025</span>
-    </div>
-    <div class="">
-        <span class="label">Měsíční pojistné</span>
-        <span class="value">1 200 Kč</span>
+        <span class="value">@Model.PlatnostDo</span>
     </div>
     <div class="">
         <span class="label">Pojištěná částka</span>
-        <span class="value">1 000 000 Kč</span>
+        <span class="value">@Model.Castka</span>
     </div>
     <div class="">
         <span class="label">Stav</span>
