--- a/EvidencePojisteni.Web/Views/Home/Pojistenci.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/Pojistenci.cshtml
@@ -11,9 +11,7 @@
     </div>
     <table class="">
         <tr>
-            <th>Jméno</th>
-            <th>Bydliště</th>
-            <th></th>
+            <th>@Model.Jmeno</th>
         </tr>
         <tr>
             <td>
@@ -21,7 +19,6 @@
                     Jmeno Prijmeni
                 </a>
             </td>
-            <td>Adresa</td>
             <td>
                 <div class="">
                     <button class="btn btn-red">Odstranit</button>
@@ -49,7 +46,6 @@
                     Jmeno Prijmeni
                 </a>
             </td>
-            <td>Adresa</td>
             <td>
                 <div class="">
                     <button class="btn btn-red">Odstranit</button>
