--- a/EvidencePojisteni.Web/Views/Home/PridatPojisteniPojistenci.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/PridatPojisteniPojistenci.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Přidat pojištění pojištěnci";
 }
-<h2>Přidat pojištění k Jmeno</h2>
+<h2>Přidat pojištění k @Model.Jmeno</h2>
 <form action="" method="post">
     <div>
         <label for="TypPojisteni">Pojištění</label>
