--- a/EvidencePojisteni.Web/Views/Home/DetailPojistence.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/DetailPojistence.cshtml
@@ -5,15 +5,13 @@
     ViewData["Title"] = "Detail Pojištěnce";
 }
 <div class="profile-info">
-    <h2></h2>
+    <h2>@Model.Jmeno</h2>
     <div class="profile-details">
         <div class="col">
-            ulice<br>
-            Město<br>
-psč        </div>
+         </div>
         <div class="col">
-            email<br>
-telefon        </div>
+            
+@Model.Telefon        </div>
     </div>
 </div>
 </div>
@@ -22,15 +20,15 @@ telefon        </div>
     <h3>Sjednaná pojištění</h3>
     <table class=>
         <tr>
-            <th>Pojištění</th>
-            <th>Částka</th>
+            <th>@Model.Typ</th>
+            <th>@Model.Castka</th>
             <th></th>
         </tr>
         <tr>
             <td>
-                <a asp-controller="Home" asp-action="DetailPojisteni" asp-route-id="">Pojištění majetku</a>
+                <a asp-controller="Home" asp-action="DetailPojisteni" asp-route-id="">@Model.Typ</a>
             </td>
-            <td>10000000 Kč</td>
+            <td>@Model.Castka</td>
             <td>
                 <div class="">
                     <button class="btn btn-red">Odstranit</button>
