--- a/EvidencePojisteni.Web/Views/Home/DetailPojistence.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/DetailPojistence.cshtml
@@ -1,17 +1,15 @@
-﻿@*
-    
-*@
+﻿@model EvidencePojisteni.Web.Class.PojisteniPojisteneOsobyViewModel
 @{
     ViewData["Title"] = "Detail Pojištěnce";
 }
 <div class="profile-info">
-    <h2>@Model.Jmeno</h2>
+    <h2>@Model.Osoba.Jmeno</h2>
     <div class="profile-details">
         <div class="col">
          </div>
         <div class="col">
             
-@Model.Telefon        </div>
+@Model.Osoba.Telefon        </div>
     </div>
 </div>
 </div>
@@ -20,15 +18,15 @@
     <h3>Sjednaná pojištění</h3>
     <table class=>
         <tr>
-            <th>@Model.Typ</th>
-            <th>@Model.Castka</th>
+            <th>@Model.Pojisteni.Typ</th>
+            <th>@Model.Pojisteni.Castka</th>
             <th></th>
         </tr>
         <tr>
             <td>
-                <a asp-controller="Home" asp-action="DetailPojisteni" asp-route-id="">@Model.Typ</a>
+                <a asp-controller="Home" asp-action="DetailPojisteni" asp-route-id="">@Model.Pojisteni.Typ</a>
             </td>
-            <td>@Model.Castka</td>
+            <td>@Model.Pojisteni.Castka</td>
             <td>
                 <div class="">
                     <button class="btn btn-red">Odstranit</button>
