--- a/EvidencePojisteni.Web/Views/Home/PridatPojisteniPojistenci.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/PridatPojisteniPojistenci.cshtml
@@ -1,38 +1,37 @@
-﻿@*
-    
-*@
+﻿@model EvidencePojisteni.Web.Class.PojisteniPojisteneOsobyViewModel
+
 @{
     ViewData["Title"] = "Přidat pojištění pojištěnci";
 }
-<h2>Přidat pojištění k @Model.Jmeno</h2>
-<form action="" method="post">
-    <div>
-        <label for="TypPojisteni">Pojištění</label>
-        <select id="TypPojisteni" name="TypPojisteni" class="">
-            <option value="majetek">Pojištění majetku</option>
-            <option value="vozidlo">Pojištění vozidla</option>
-            <option value="zivotni">Životní pojištění</option>
-        </select>
-    </div>
-            <label for="Castka">Částka</label>
-            <input type="number" id="Castka" name="Castka" class="" placeholder="10000000" />
+<div class="container">
+    <h2>Přidat pojištění k @Model.Osoba.Jmeno @Model.Osoba.Prijmeni</h2>
+    <form method="post">
+        <div class="form-group">
+            <label asp-for="Pojisteni.Typ">Pojištění</label>
+            <select asp-for="Pojisteni.Typ" class="form-control">
+                <option value="majetek">Pojištění majetku</option>
+                <option value="vozidlo">Pojištění vozidla</option>
+                <option value="zivotni">Životní pojištění</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label asp-for="Pojisteni.Castka">Částka</label>
+            <input asp-for="Pojisteni.Castka" type="number" class="form-control" placeholder="10000000" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Pojisteni.Predmet">Předmět pojištění</label>
+            <input asp-for="Pojisteni.Predmet" type="text" class="form-control" placeholder="Byt" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Pojisteni.PlatnostOd">Platnost od</label>
+            <input asp-for="Pojisteni.PlatnostOd" type="text" class="form-control" placeholder="1.1.2025" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Pojisteni.PlatnostDo">Platnost do</label>
+            <input asp-for="Pojisteni.PlatnostDo" type="text" class="form-control" placeholder="31.12.2025" />
         </div>
         <div>
-            <label for="PredmetPojisteni">Předmět pojištění</label>
-            <input type="text" id="PredmetPojisteni" name="PredmetPojisteni" class="" placeholder="Byt" />
+            <button type="submit" class="btn btn-primary">Uložit</button>
         </div>
-    </div>
-    <div>
-        <div>
-            <label for="PlatnostOd">Platnost od</label>
-            <input type="text" id="PlatnostOd" name="PlatnostOd" class="" placeholder="1.1.2025" />
-        </div>
-        <div>
-            <label for="PlatnostDo">Platnost do</label>
-            <input type="text" id="PlatnostDo" name="PlatnostDo" class="" placeholder="31.12.2025" />
-        </div>
-    </div>
-    <div>
-        <button type="submit" class="btn btn-primary">Uložit</button>
-    </div>
-</form>
+    </form>
+</div>
