--- a/EvidencePojisteni.Web/Views/Home/ListPojistenci.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/ListPojistenci.cshtml
@@ -1,43 +1,42 @@
-﻿
-
-@{
-    
-}
-@model EvidencePojisteni.Person[]
+﻿@model EvidencePojisteni.Person[]
 <div class="container">
-    <h1>Pojištěnci</h1>
+    <h1>Persons</h1>
     <div>
-        <a class="btn btn-blue" asp-action="NovyPojistenec" asp-controller="Home">Nový pojištěnec</a>
+        <a class="btn btn-blue" asp-action="NewPerson" asp-controller="Home">New Person</a>
     </div>
     <table class="table">
         <thead>
             <tr>
-                <th>Jméno</th>
-                <th>Příjmení</th>
-                <th>Adresa</th>
-                <th>Akce</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Phone</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>
-                    <a asp-action="DetailPojistence" asp-route-id="@Model">
-						@Model.
-                    </a>
-                </td>
-                <td>@Model.</td>
-                <td>
-                    <a class="btn btn-yellow" asp-action="EditovatPojistence" asp-route-id="@Model.">Editovat</a>
-                    <a class="btn btn-red" asp-action="OdstranitPojistence" asp-route-id="@Model.">Odstranit</a>
-                </td>
-            </tr>
-            </tbody>
+            @foreach (var person in Model)
+            {
+                <tr>
+                    <td>
+                        <a asp-action="DetailPerson" asp-route-id="@person.PersonNumber">
+                            @person.FirstName
+                        </a>
+                    </td>
+                    <td>@person.LastName</td>
+                    <td>@person.Phone</td>
+                    <td>
+                        <a class="btn btn-yellow" asp-action="EditPerson" asp-route-id="@person.PersonNumber">Edit</a>
+                        <a class="btn btn-red" asp-action="DeletePerson" asp-route-id="@person.PersonNumber">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
     <div class="pagination">
-        <button class="pagination-btn" disabled>Předchozí</button>
+        <button class="pagination-btn" disabled>Previous</button>
         <button class="pagination-btn active">1</button>
         <button class="pagination-btn">2</button>
         <button class="pagination-btn">3</button>
-        <button class="pagination-btn">Další</button>
+        <button class="pagination-btn">Next</button>
     </div>
 </div>
