--- a/EvidencePojisteni.Web/Views/Home/PolicyDetail.cshtml
+++ b/EvidencePojisteni.Web/Views/Home/PolicyDetail.cshtml
@@ -7,27 +7,27 @@
     <h1>Insurance Details</h1>
     <div>
         <span class="label">Insurance Type</span>
-        <span class="value">@Model.Pojisteni.Type</span>
+        <span class="value">@Model.Policy.InsuranceType</span>
     </div>
     <div>
         <span class="label">Insured Person</span>
-        <span class="value">@Model.Osoba.FirstName @Model.Osoba.LastName</span>
+        <span class="value">@Model.Person.FirstName @Model.Person.LastName</span>
     </div>
     <div>
         <span class="label">Valid From</span>
-        <span class="value">@Model.Pojisteni.ValidFrom</span>
+        <span class="value">@Model.Contract.ValidFrom</span>
     </div>
     <div class="info-row">
         <span class="label">Valid To</span>
-        <span class="value">@Model.Pojisteni.ValidTo</span>
+        <span class="value">@Model.Contract.ValidTo</span>
     </div>
     <div>
         <span class="label">Insured Amount</span>
-        <span class="value">@Model.Pojisteni.Amount</span>
+        <span class="value">@Model.Contract.Amount</span>
     </div>
     <div>
         <span class="label">Status</span>
-        <span class="value">@Model.Pojisteni.Active</span>
+        <span class="value">@Model.Contract.Active</span>
     </div>
     <div class="actions">
         <button class="secondary" type="button">Back</button>
