--- a/EvidencePojisteni.Web/Views/Shared/_Layout.cshtml
+++ b/EvidencePojisteni.Web/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Policy">Policy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Policy">PolicyDetail</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Person">Person</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Person">PersonDetail</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddPolicyToPerson">AddPolicyToPerson</a>
